--- a/frontend/src/components/SignUp/Register.css
+++ b/frontend/src/components/SignUp/Register.css
@@ -1,11 +1,4 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #F6F7FA;
-}
-
-.container {
+.signup-container {
     width: 45%;
     background-color: #fff;
     border: 1px solid #ebebeb;
@@ -16,34 +9,34 @@ body {
     animation: transitionIn-Y-over 0.5s;
 }
 
-td {
+.signup-td {
     text-align: center;
 }
 
-.header-text {
+.signup-header-text {
     font-weight: 500;
     font-size: 2rem;
     letter-spacing: -1px;
     margin-bottom: 5px;
 }
 
-.sub-text {
+.signup-sub-text {
     font-size: 15px;
     color: #8a8a8a;
 }
 
-.form-label {
+.signup-form-label {
     color: #2c2c2c;
     text-align: left;
     font-size: 14px;
 }
 
-.label-td {
+.signup-label-td {
     text-align: left;
     padding-top: 5px;
 }
 
-.input-text {
+.signup-input-text {
     width: 100%;
     padding: 5px;
     margin: 5px 0;
@@ -87,4 +80,3 @@ td {
     opacity: 0.8;
     transition: 0.5s;
 }
-
