--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-body{
+/* body{
   background-image: url(../src/img/bg01.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -84,4 +84,4 @@ table{
   left: 45%;
   font-size: 13px;
   animation: transitionIn-Y-over 0.5s;
-}
+} */
